--- a/index.html
+++ b/index.html
@@ -47,7 +47,15 @@
       <h2>作业标题</h2>
       <p>作业描述：这里是作业的描述内容。</p>
       <p>截止日期：2024年6月20日</p>
-      <a href="#">查看详情</a>
+      <a href="练习一.html">练习一</a>
+      <a href="练习二.html">练习二</a>
+      <a href="练习三.html">练习三</a>
+      <a href="练习四.html">练习四</a>
+      <a href="练习五.html">练习五</a>
+      <a href="练习六.html">练习六</a>
+      <a href="练习七.html">练习七</a>
+      <a href="实验四.html">实验四</a>
+      <a href="实验五.html">实验五</a>
     </div>
     <!-- 在这里添加更多作业项目 -->
   </div>
