--- a/实验四.html
+++ b/实验四.html
@@ -63,20 +63,20 @@
 
 <!-- 左侧对联广告 -->
 <div id="left-ad" class="side-ad">
-    <img src="css/left-ad.jpg" alt="左侧广告">
+    <img src="图片/left-ad.jpg" alt="左侧广告">
     <button class="close-btn" onclick="closeAd('left-ad')">关闭</button>
 </div>
 
 
 <!-- 右侧对联广告 -->
 <div id="right-ad" class="side-ad">
-    <img src="css/right-ad.jpg" alt="右侧广告">
+    <img src="图片/right-ad.jpg" alt="右侧广告">
     <button class="close-btn" onclick="closeAd('right-ad')">关闭</button>
 </div>
 
 <!-- 右下角弹窗广告 -->
 <div id="popup-ad" class="popup-ad">
-    <img src="css/popup-ad.jpg" alt="弹窗广告">
+    <img src="图片/popup-ad.jpg" alt="弹窗广告">
     <button class="close-btn" onclick="closeAd('popup-ad')">关闭</button>
 </div>
 
