--- a/练习三.html
+++ b/练习三.html
@@ -5,12 +5,12 @@
     <title>让坦克开起来</title>
     <style type="text/css">
         input{font-size:26px;margin-top: 20px;}
-        body{background-image: url(图片/grassland.png);}
+        body{background-image: url(img/grassland.png);}
         #mytank{position: absolute;left:10px;top:100px}
     </style>
 </head>
 <body>        
-    <img id="mytank" src="图片/down.png"/> <!-- 初始化为朝下的坦克 -->
+    <img id="mytank" src="img/down.png"/> <!-- 初始化为朝下的坦克 -->
 
     <script>
         // 获取坦克元素
@@ -41,28 +41,28 @@
 
         // 向左移动
         function moveLeft() {
-            tank.src = "图片/left.png"; // 切换为朝左的坦克图片
+            tank.src = "img/left.png"; // 切换为朝左的坦克图片
             tankLeft -= step;
             tank.style.left = tankLeft + "px";
         }
 
         // 向上移动
         function moveUp() {
-            tank.src = "图片/up.png"; // 切换为朝上的坦克图片
+            tank.src = "img/up.png"; // 切换为朝上的坦克图片
             tankTop -= step;
             tank.style.top = tankTop + "px";
         }
 
         // 向右移动
         function moveRight() {
-            tank.src = "图片/right.png"; // 切换为朝右的坦克图片
+            tank.src = "img/right.png"; // 切换为朝右的坦克图片
             tankLeft += step;
             tank.style.left = tankLeft + "px";
         }
 
         // 向下移动
         function moveDown() {
-            tank.src = "图片/down.png"; // 切换为朝下的坦克图片
+            tank.src = "img/down.png"; // 切换为朝下的坦克图片
             tankTop += step;
             tank.style.top = tankTop + "px";
         }
