--- a/练习五.html
+++ b/练习五.html
@@ -54,11 +54,11 @@
 </head>
 <body>
 <div id="game-container">
-    <img id="pet" class="character" src="../图片/pet.gif" alt="宠物">
-    <img id="player_right" class="character" src="../图片/player_right.gif" alt="人物">
-    <img id="player_big" class="character" src="../图片/player_big.gif" alt="商人">
-    <img id="boss" class="character" src="../图片/player1_big.gif" alt="boss">
-    <img id="player2" class="character" src="../图片/player2.gif" alt="变身">
+    <img id="pet" class="character" src="../img/pet.gif" alt="宠物">
+    <img id="player_right" class="character" src="../img/player_right.gif" alt="人物">
+    <img id="player_big" class="character" src="../img/player_big.gif" alt="商人">
+    <img id="boss" class="character" src="../img/player1_big.gif" alt="boss">
+    <img id="player2" class="character" src="../img/player2.gif" alt="变身">
     <div class="boss-text">我是boss</div>
     <div class="merchant-text">我是商人</div>
 </div>
