--- a/练习六.html
+++ b/练习六.html
@@ -23,10 +23,10 @@
 	<body>
 		<div class="focus">
 			<ul>
-				<li><img src="图片/1.jpg"></li>
-				<li><img src="图片/2.jpg"></li>
-				<li><img src="图片/3.jpg"></li>
-				<li><img src="图片/4.jpg"></li>
+				<li><img src="img/1.jpg"></li>
+				<li><img src="img/2.jpg"></li>
+				<li><img src="img/3.jpg"></li>
+				<li><img src="img/4.jpg"></li>
 			</ul>
 			<ol>
 			</ol>
